--- a/doc/document.tex
+++ b/doc/document.tex
@@ -2,7 +2,8 @@
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{verbatim}
-\usepackage{glossary}
+\usepackage{glossaries}
+% \usepackage{glossary}
 \usepackage{fancybox}
 \usepackage[ps2pdf, bookmarks=true]{hyperref}
 
