MSc thesis now builds.

--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -148,8 +148,8 @@ six-layer PCBs or more, for example~\cite{Xilinx_SP3_DS}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_top.eps}
-\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_bot.eps}
+\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_top.pdf}
+\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_bot.pdf}
 \end{center}
 \caption[OpenVGA PCB artwork, both sides]{OpenVGA PCB artwork, both sides.}
 \label{HARDWARE__PCB}
@@ -237,7 +237,7 @@ good signal integrity for a two-layer board.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.5\linewidth]{images/openvga_bot.eps}
+\includegraphics[width=0.5\linewidth]{images/openvga_bot.pdf}
 \end{center}
 \caption[OpenVGA solder-side components]{OpenVGA solder-side components.}
 \label{HARD_Bot}
