--- a/doc/background.tex
+++ b/doc/background.tex
@@ -16,7 +16,7 @@ adapter is covered here.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/vga_overview.eps}
+\includegraphics[width=\linewidth]{images/vga_overview.pdf}
 % \includegraphics[width=\linewidth]{images/ati_rage.eps}
 % convert -resize 1024 ati_rage.jpeg eps3:ati_rage.eps
 \caption[ATi Rage graphics adpater]{ATi Rage graphics adapter with the
@@ -106,7 +106,8 @@ Figure~\ref{INTRO_CRT_Redraw} for more detail).
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.9\linewidth]{images/crt_redraw.eps}
+\includegraphics[width=0.9\linewidth]{images/crt_redraw.pdf}
+% \includegraphics[width=0.9\linewidth]{images/crt_redraw.eps}
 \end{center}
 \caption[VGA display redraw timing and signals]{VGA display redraw timing and
 signals. (Image from~\cite{knutsson:fbg}.)}
@@ -175,7 +176,7 @@ dynamically exchanged by modifying user programmable registers.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/ascii.eps}
+\includegraphics[width=\linewidth]{images/ascii.png}
 \caption[ASCII and extended-ASCII character set]{ASCII and extended-ASCII
 character sets, and an example pixel representation.}
 \label{INTRO_ASCII}
@@ -315,7 +316,7 @@ Library}}, an open-specification 3D graphics library.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/ogd1_showcase.eps}
+\includegraphics[width=\linewidth]{images/ogd1_showcase.jpeg}
 \end{center}
 \caption[OpenGraphics OGD1]{OpenGraphics OGD1 PCB and components. (Image
 from~\cite{OpenGraphics}.)}
