--- a/doc/cpu.tex
+++ b/doc/cpu.tex
@@ -32,7 +32,7 @@ description={Functional Unit}} (FUs), resulting in smaller processor designs.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/hardware_sched.eps}
+\includegraphics[width=\linewidth]{images/hardware_sched.pdf}
 \caption[The division of responsibilities between hardware and compiler]{The
 division of responsibilities between hardware and compiler. (Image
 from~\cite{corporaal1999tmi})}
@@ -97,7 +97,7 @@ path and limiting maximum frequency.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/mfsr8.eps}
+\includegraphics[width=\linewidth]{images/mfsr8.pdf}
 \caption[An 8-bit MFSR with a cycle size of 255]{An 8-bit MFSR (Multiple
 Feedback Shift Register) with a cycle size of 255. The total logic required is
 only eight D-type flip-flops and two XOR logic gates. \textit{Image courtesy
@@ -411,7 +411,7 @@ transports, resulting in smaller and faster designs~\cite{arnold1997dtr}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/tta16_henk.eps}
+\includegraphics[width=\linewidth]{diagrams/tta16_henk.pdf}
 \caption[TTA16 transports and functional units overview]{TTA16 transport-based
 diagram which shows the connections between transports and FUs.}
 \end{center}
@@ -607,7 +607,7 @@ via transports, and then the specified functional units are triggered.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=8cm]{diagrams/tta16_pipeline.eps}
+\includegraphics[width=8cm]{diagrams/tta16_pipeline.pdf}
 \caption[TTA16 pipeline overview]{TTA16 pipeline overview showing a three-stage
 pipeline.}
 \end{center}
@@ -656,7 +656,7 @@ the PC is treated as just another FU register, any value can be written to it.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=9cm]{diagrams/pc_unit.eps}
+\includegraphics[width=9cm]{diagrams/pc_unit.pdf}
 \caption[The PC increment and branch unit]{The PC increment and branch unit. \\
 The incrementer (labelled ``+1'') is actually implemented as an MFSR to
 reduce PC calculation latency~\cite{MFSR_List}.}
@@ -754,7 +754,7 @@ arbitrary function LUT4s (four-input Look-Up Tables) as used in this FU.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=8cm]{diagrams/bitwise_unit.eps}
+\includegraphics[width=8cm]{diagrams/bitwise_unit.pdf}
 \caption[3-Bit, Bitwise Operations Unit]{3-Bit, Bitwise Operations Unit. \\
 This shows how a 3-bit, bitwise operations FU implementation would look when
 synthesised for the Spartan-3 architecture. The inputs are a[2:0], b[2:0],
@@ -923,7 +923,7 @@ a RF read or write.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/tta16_instr.eps}
+\includegraphics[width=\linewidth]{diagrams/tta16_instr.pdf}
 \caption[TTA16 instruction format]{TTA16 instruction format. More details are
 available in the TTA16 programming guide (see Appendix~\ref{TTA_Programming})}
 \label{TTA_Instruction_Format}
@@ -1134,7 +1134,7 @@ these stages, but they are actually the same.}:
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=11cm]{diagrams/risc16_pipeline2.eps}
+\includegraphics[width=11cm]{diagrams/risc16_pipeline2.pdf}
 \caption[RISC16 pipeline]{RISC16 has five pipeline stages.}
 \label{RISC16_Pipeline}
 \end{center}
@@ -1174,7 +1174,7 @@ which are shown in Figure~\ref{RISC16_Instructions}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=12cm]{diagrams/risc16_instr.eps}
+\includegraphics[width=12cm]{diagrams/risc16_instr.pdf}
 \caption[RISC16 instruction formats]{RISC16 instruction formats.}
 \label{RISC16_Instructions}
 \end{center}
@@ -1327,7 +1327,7 @@ register sources for the current instruction.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/risc16_bypass.eps}
+\includegraphics[width=\linewidth]{diagrams/risc16_bypass.pdf}
 \caption[Data Bypassing Scheme Used by RISC16]{This shows the bypassing scheme
 used by RISC16.}
 \label{RISC16_Bypass}
