--- a/doc/document.tex
+++ b/doc/document.tex
@@ -5,7 +5,8 @@
 \usepackage{glossaries}
 % \usepackage{glossary}
 \usepackage{fancybox}
-\usepackage[ps2pdf, bookmarks=true]{hyperref}
+\usepackage[bookmarks=true]{hyperref}
+% \usepackage[ps2pdf, bookmarks=true]{hyperref}
 
 % \oddsidemargin -0.04cm   % read Lamport p.163
 % \evensidemargin -0.04cm
