--- a/doc/io.tex
+++ b/doc/io.tex
@@ -67,7 +67,7 @@ VGA clocks from the on-board 50~MHz oscillator.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.65\linewidth]{diagrams/bufgmux.eps}
+\includegraphics[width=0.65\linewidth]{diagrams/bufgmux.pdf}
 \caption[OpenVGA pixel clock generation]{BUFGMUX and DCM example showing the
 OpenVGA pixel clock generation.}
 \label{CLOCK_BUFGMUX}
@@ -163,8 +163,8 @@ frequency (see Table~\ref{CLOCK_Frequencies}).
 different clock domains}\\
 \\
 Synchronous & Asynchronous	\\
-\includegraphics[width=0.33\linewidth]{diagrams/synchroniser.eps}	&
-\includegraphics[width=0.44\linewidth]{diagrams/sync2.eps}
+\includegraphics[width=0.33\linewidth]{diagrams/synchroniser.pdf}	&
+\includegraphics[width=0.44\linewidth]{diagrams/sync2.pdf}
 \end{tabular}
 \end{center}
 \end{minipage}
@@ -250,7 +250,7 @@ setting of FIFO state flags.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/afifo.eps}
+\includegraphics[width=\linewidth]{diagrams/afifo.pdf}
 \caption[Simplified Asynchronous FIFO Schematic]{Simplified schematic showing
 the basic components of an asynchronous FIFO.}
 \label{FIFO_Logic}
@@ -374,7 +374,7 @@ modes).
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/pci_bridge.eps}
+\includegraphics[width=\linewidth]{images/pci_bridge.pdf}
 \end{center}
 \caption[PCI-to-Wishbone bridge block diagram]{PCI-to-Wishbone bridge block
 diagram.}
@@ -416,7 +416,7 @@ the transaction is completed.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/pci_state_machines.eps}
+\includegraphics[width=\linewidth]{images/pci_state_machines.pdf}
 \end{center}
 \caption[The PCI bridge state machines]{The PCI bridge state machines.}
 \label{PCI_SMs}
@@ -524,7 +524,7 @@ ns.}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/cfg_space_cap.eps}
+\includegraphics[width=\linewidth]{images/cfg_space_cap.pdf}
 \end{center}
 \caption[PCI configuration space write transaction]{Screen capture of a PCI
 configuration space write transaction.}
@@ -567,7 +567,7 @@ colour depth (and can be from 1-bit to 32-bits per pixel).
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/video_controller.eps}
+\includegraphics[width=\linewidth]{images/video_controller.pdf}
 \end{center}
 \caption[Video controller block diagram]{Video controller block diagram.}
 \label{VIDEO_Ctrl}
@@ -599,7 +599,7 @@ evaluate each processor.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/crt_sim.eps}
+\includegraphics[width=\linewidth]{images/crt_sim.png}
 \caption[Emulated text-mode display data produced by a simulation]{Emulated
 text-mode display data produced by a simulation.}
 \label{CRT_Sim}
