--- a/doc/memory.tex
+++ b/doc/memory.tex
@@ -24,7 +24,7 @@ improve performance, the data cache operates at the processor frequency, up to
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/mem_hierarchy.eps}
+\includegraphics[width=\linewidth]{diagrams/mem_hierarchy.pdf}
 \caption[OpenVGA memory hierarchy]{OpenVGA memory overview presented as a
 directed graph.}
 \end{center}
@@ -95,7 +95,7 @@ saturated.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/wb_sdram_state_machine.eps}
+\includegraphics[width=\linewidth]{diagrams/wb_sdram_state_machine.pdf}
 \caption[Wishbone Clock Domain State Machine]{Wishbone clock domain state
 machine.}
 \end{center}
@@ -178,7 +178,7 @@ asserted the IOBs can receive data.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=8cm]{diagrams/ddr_primitive.eps}
+\includegraphics[width=8cm]{diagrams/ddr_primitive.pdf}
 \caption[Spartan-3 DDR IOB Primitive]{A simplified schematic of the DDR output
 primitive within a Spartan-3 IOB\cite{Xilinx_SP3_DS}.}
 \label{MEM_DDR_IOB}
@@ -208,7 +208,7 @@ with the output redirected to a CRT simulator, developed as part of OpenVGA and
 written in Python, for displaying pixel data (see Figure~\ref{CRT_Sim}).
 
 \begin{figure}[h!]
-\includegraphics[width=\linewidth]{images/pci_to_sdram_xfer.eps}
+\includegraphics[width=\linewidth]{images/pci_to_sdram_xfer.pdf}
 \caption[A simulation of a PCI to SDRAM data transfer]{A simulation of a PCI to
 SDRAM data transfer.}
 \label{MEM_GtkWave_SDRAM}
@@ -224,7 +224,7 @@ the Wishbone signals \texttt{CTI} and \texttt{BTE}).
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/mem_test.eps}
+\includegraphics[width=\linewidth]{images/mem_test.jpeg}
 \caption[SDRAM Memory Test Results]{OpenVGA passing memory tests
 while running at 120 MHz.}
 \label{MEM_Testing}
@@ -753,7 +753,7 @@ combinatorial delay, so this logic was pipelined.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/cache_sense_logic.eps}
+\includegraphics[width=\linewidth]{diagrams/cache_sense_logic.pdf}
 \caption[Simplified Schematic of the Cache Sense Logic]{Simplified schematic
 showing the cache sense logic.}
 \label{CACHE_Sense}
