--- a/doc/openvga.tex
+++ b/doc/openvga.tex
@@ -17,7 +17,7 @@ these components will be further elaborated on in the following chapters.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/freega_overview.eps}
+\includegraphics[width=\linewidth]{images/freega_overview.pdf}
 \caption[OpenVGA Hardware Features]{OpenVGA Hardware Features.}
 \label{OPENVGA_OpenVGA}
 \end{center}
@@ -44,7 +44,7 @@ Section~\ref{OPENVGA_Logic_Cores}.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\linewidth]{images/pci_stub.eps}
+\includegraphics[width=\linewidth]{images/pci_stub.jpeg}
 \caption[PCI development stub board]{PCI development stub board. The
 bus-switches, which are visible in the middle of the copper coloured PCB,
 translate the PCI's 5 V signals to the 3.3 V required by the Spartan-3 FPGA.}
@@ -72,7 +72,7 @@ testing (see Figure~\ref{PCI_CFG_Cap}).
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\linewidth]{images/FreeGA_orig.eps}
+\includegraphics[width=\linewidth]{images/FreeGA_orig.jpeg}
 \caption[OpenVGA PCB version 2 with DDR SDRAM]{Prototype PCB featuring DDR
 SDRAM, DVI, and only eight colour VGA (via the DVI analogue outputs).}
 \label{OPENVGA_Version2}
@@ -118,7 +118,7 @@ and numerous other support modules.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/freega_arch.eps}
+\includegraphics[width=\linewidth]{images/freega_arch.pdf}
 \caption[OpenVGA Architecture Block Diagram]{OpenVGA Architecture Block Diagram.}
 \label{OPENVGA_Arch}
 \end{center}
