--- a/doc/risc_prog.tex
+++ b/doc/risc_prog.tex
@@ -48,7 +48,7 @@ instruction formats are listed in Figure~\ref{RISCPROG_Instruction_Formats}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=12cm]{diagrams/risc16_instr.eps}
+\includegraphics[width=12cm]{diagrams/risc16_instr.pdf}
 \caption[RISC16 instruction formats]{RISC16 instruction formats.}
 \label{RISCPROG_Instruction_Formats}
 \end{center}
