--- a/doc/tta_prog.tex
+++ b/doc/tta_prog.tex
@@ -96,7 +96,7 @@ but upto four can be used per instruction\cite{corporaal1993maa}.}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/tta16_instr.eps}
+\includegraphics[width=\linewidth]{diagrams/tta16_instr.pdf}
 \caption[TTA16 instruction format]{TTA16 instruction format, see text for a
 complete explanation of the bit-fields.}
 \label{TTAPROG_Instruction_Format}
@@ -232,7 +232,7 @@ share \textit{REG1} and the last two transports (2 and \textit{COM}) share
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{diagrams/tta16_used_fields.eps}
+\includegraphics[width=\linewidth]{diagrams/tta16_used_fields.pdf}
 \caption[TTA16 instruction shared bit-fields]{TTA16 shared bit-fields between
 instructions. A TTA16 instruction uses the \textit{B, REG0} and \textit{REG1}
 fields from the previous instruction for register reads, the \textit{REG0}
