--- a/doc/wishbone.tex
+++ b/doc/wishbone.tex
@@ -39,7 +39,7 @@ is a write transaction.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=8cm]{images/wishbone_bus.eps}
+\includegraphics[width=8cm]{images/wishbone_bus.pdf}
 % \includegraphics[width=8cm]{images/Wishbone_Bus_Point_to_Point.eps}
 \caption[A Wishbone Point-to-Point Connection Scheme]{This is an example
 implementation of a basic master-slave, point-to-point Wishbone interconnect.
@@ -54,7 +54,7 @@ IP Cores', Revision: B.3, Released: September 7, 2002.}
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/wishbone_demo.eps}
+\includegraphics[width=\linewidth]{images/wishbone_demo.pdf}
 \caption[A Sample Wishbone Transaction]{One 16-bit word is written by a master
 to a slave device. The signals CYC$\_$O and STB$\_$O are asserted by the master to frame the transaction. The ACK$\_$I
 response is received by the master and indicates that the slave has completed the
