MSc thesis now builds.

--- a/doc/memory.tex
+++ b/doc/memory.tex
@@ -208,7 +208,7 @@ with the output redirected to a CRT simulator, developed as part of OpenVGA and
 written in Python, for displaying pixel data (see Figure~\ref{CRT_Sim}).
 
 \begin{figure}[h!]
-\includegraphics[width=\linewidth]{images/pci_to_sdram_xfer.pdf}
+\includegraphics[width=\linewidth]{images/pci_to_sdram_xfer.png}
 \caption[A simulation of a PCI to SDRAM data transfer]{A simulation of a PCI to
 SDRAM data transfer.}
 \label{MEM_GtkWave_SDRAM}
