--- a/doc/wishbone.tex
+++ b/doc/wishbone.tex
@@ -54,7 +54,7 @@ IP Cores', Revision: B.3, Released: September 7, 2002.}
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth]{images/wishbone_demo.pdf}
+\includegraphics[width=\linewidth]{images/wishbone_demo.png}
 \caption[A Sample Wishbone Transaction]{One 16-bit word is written by a master
 to a slave device. The signals CYC$\_$O and STB$\_$O are asserted by the master to frame the transaction. The ACK$\_$I
 response is received by the master and indicates that the slave has completed the
