--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -148,8 +148,8 @@ six-layer PCBs or more, for example~\cite{Xilinx_SP3_DS}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_top.pdf}
-\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_bot.pdf}
+\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_top.png}
+\includegraphics[width=0.49\linewidth]{images/freega3_pcb_art_bot.png}
 \end{center}
 \caption[OpenVGA PCB artwork, both sides]{OpenVGA PCB artwork, both sides.}
 \label{HARDWARE__PCB}
